--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -213,6 +213,13 @@
 				HAAAAA==
 				</data>
 			</dict>
+			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
+			<dict>
+				<key>AAPL,ig-platform-id</key>
+				<data>
+				AACSPg==
+				</data>
+			</dict>
 		</dict>
 		<key>USB</key>
 		<dict>
@@ -265,7 +272,7 @@
 			<key>ATI</key>
 			<false/>
 			<key>Intel</key>
-			<true/>
+			<false/>
 			<key>NVidia</key>
 			<false/>
 		</dict>
