--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -8,35 +8,6 @@
 		<true/>
 		<key>DSDT</key>
 		<dict>
-			<key>#DropOEM_DSM</key>
-			<dict>
-				<key>ATI</key>
-				<true/>
-				<key>Firewire</key>
-				<true/>
-				<key>HDA</key>
-				<true/>
-				<key>HDMI</key>
-				<true/>
-				<key>IDE</key>
-				<true/>
-				<key>IntelGFX</key>
-				<true/>
-				<key>LAN</key>
-				<true/>
-				<key>LPC</key>
-				<false/>
-				<key>NVidia</key>
-				<true/>
-				<key>SATA</key>
-				<true/>
-				<key>SmBUS</key>
-				<false/>
-				<key>USB</key>
-				<true/>
-				<key>WIFI</key>
-				<true/>
-			</dict>
 			<key>Debug</key>
 			<false/>
 			<key>Fixes</key>
@@ -179,7 +150,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>slide=0 dart=0</string>
+		<string>slide=0 dart=0 -v</string>
 		<key>Debug</key>
 		<true/>
 		<key>DefaultVolume</key>
@@ -198,7 +169,7 @@
 		<key>Audio</key>
 		<dict>
 			<key>Inject</key>
-			<integer>3</integer>
+			<integer>28</integer>
 		</dict>
 		<key>Properties</key>
 		<dict>
